# chess

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  BoardView.h  Game.h  Menu.h  Piece.h  Utils.h
src/: Board.cpp  BoardView.cpp  Game.cpp  Menu.cpp  Piece.cpp  Utils.cpp  main.cpp
